--- a/status.html
+++ b/status.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-​
+​    <script type="text/javascript" src="predict.js"></script>
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -12,44 +12,60 @@
 <body >
     <nav class="navbar navbar-expand-lg navbar-light ">
       <a href="index.html" class="logo">
-        <h1 style="color: rgb(111, 4, 160);">Stock-X</h1>
+        <h1 style="color: rgb(111, 4, 160);">Stock-Pedia</h1>
       </a>
   </div>
 </nav>
-<h4 class="ml-3 mt-2">Students Requests</h4>
+<h4 class="ml-3 mt-2">Stock Prices</h4>
 <div class="form-group ml-5 d-flex justify-content-start mx-auto w-75"></div>
 <div>
   <table class="table">
     <thead>
       <tr>
         <th scope="col">Sl no.</th>
-        <th scope="col">Student name</th>
-        <th scope="col">Current college</th>
-        <th scope="col">Status</th>
+        <th scope="col">Stock Name</th>
+        <th scope="col">Current Price</th>
+        <th scope="col">Predicted Price</th>
+        <th scope="col">Predict Price</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <td>Tigeress</td>
-        <td>Stanford</td>
-        <td><input type="radio"> Pending</td>
-        <td><input type="radio"> Approved</td>
+        <td>Apple</td>
+        <td id="AAPL-C"></td>  
+        <td id="AAPL-P"></td>
+        <td><button>Predict</button></td>
       </tr>
       <tr>
         <th scope="row">2</th>
-        <td>Po the Panda</td>
-        <td>Yale</td>
-        <td><input type="radio"> Pending</td>
-        <td><input type="radio"> Approved</td>
+        <td>Microsoft</td>
+        <td id="MSFT-C"></td>  
+        <td id="MSFT-P"></td>
+        <td><button>Predict</button></td>
       </tr>
       <tr>
         <th scope="row">3</th>
-        <td>Oogway</td>
-        <td>Stanford</td>
-        <td><input type="radio"> Pending</td>
-        <td><input type="radio"> Approved</td>
+        <td>Amazon</td>
+        <td id="AMZN-C"></td>  
+        <td id="AMZN-P"></td>
+        <td><button>Predict</button></td>
       </tr>
+      <tr>
+        <th scope="row">4</th>
+        <td>Tesla</td>
+        <td id="TSLA-C"></td>  
+        <td id="TSLA-P"></td>
+        <td><button>Predict</button></td>
+      </tr>
+      <tr>
+        <th scope="row">5</th>
+        <td>Alphabet</td>
+        <td id="GOOG-C"></td>  
+        <td id="GOOG-P"></td>
+        <td><button>Predict</button></td>
+      </tr>
+
     </tbody>
   </table>
 </div>
